fix uiType span vertical align

--- a/app/public/app.css
+++ b/app/public/app.css
@@ -212,6 +212,10 @@ fieldset {
     margin-right: 1rem;
 }
 
+.uiType-span {
+    padding-top: 7px;
+}
+
 label {
     font-weight: initial; /* until we remove bootstrap */
 }
